--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-md-8">
                 {% block content %}
-                {% endblock %}
+                {% endblock %}aaa
                 </div>
             </div>
         </div>
