--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
 
         gtag('config', 'G-CMBW2ZLB1P');
         </script>
-        <title>Django Girls blog</title>
+        <title>Django Girls blog だぜ！</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-md-8">
                 {% block content %}
-                {% endblock %}aaa
+                {% endblock %}
                 </div>
             </div>
         </div>
